# sneki

./: .gitignore  CMakeLists.txt  constants.h  game.c  game.h  game_ball.c  game_ball.h  init.c  init.h  input.c  input.h  main.c  portal.c  portal.h  render.c  render.h  saves.c  saves.h  scores.c  scores.h  snake.c  snake.h  time.c  time.h
